[package]
name = "aoc2023-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
regex = "1.10.2"
rustfmt = "0.10.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
threadpool = "1.8.1"
